frontPage: videoModal: resize to 80% screen size, ensure full video is visible.

--- a/app/frontPage/css/index/modal.scss
+++ b/app/frontPage/css/index/modal.scss
@@ -167,18 +167,24 @@
     }
   }
 }
-
 .create-account-modal {
   .form .credentials {
     margin-bottom: 0em;
   }
 }
 
+
+div[data-js-id="video-modal"] {
+  width: 500px; // controlled by JS in application.js
+  margin-left: auto;
+  margin-right: auto;
+}
+
 div.video-header {
   background-color: $navigation-pink;
   height: 4px;
+  width: 100%;
   text-align: right;
-  width: 500px;
   margin: auto;
   color: white;
   button.video-close {
